<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_attention"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_attention" />

    <item
        android:id="@+id/navigation_vip"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_vip" />

    <item
        android:id="@+id/navigation_doki"
        android:icon="@drawable/ic_doki_foreground"
        android:title="@string/title_doki" />

    <item
        android:id="@+id/navigation_person"
        android:icon="@drawable/ic_person_foreground"
        android:title="@string/title_person" />

</menu>