<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.buttontest.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_attention"
        android:name="com.example.buttontest.ui.dashboard.DashboardFragment"
        android:label="@string/title_attention"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_vip"
        android:name="com.example.buttontest.ui.notifications.NotificationsFragment"
        android:label="@string/title_vip"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_doki"
        android:name="com.example.buttontest.ui.doki.DokiFragment"
        android:label="@string/title_doki"
        tools:layout="@layout/fragment_doki" />

    <fragment
        android:id="@+id/navigation_person"
        android:name="com.example.buttontest.ui.person.PersonFragment"
        android:label="@string/title_person"
        tools:layout="@layout/fragment_person" />

</navigation>